<resources>
    <string name="app_name">LogoGame</string>
    <string name="car_logo_game_label">Car Logo Game</string>
    <string name="mode_1_label">Identify the Car Make</string>
    <string name="mode_2_label">Hints</string>
    <string name="mode_3_label">Identify the Car Image</string>
    <string name="mode_4_label">Advanced Level</string>
    <string name="description_label">Choose an option below</string>
    <string name="title_activity_mode2">Mode2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="header_text_1">Identify the Car Make</string>
    <string name="header_text_2">Hints</string>
    <string name="header_text_3">Identify the Car Image</string>
    <string name="header_text_4">Advanced Level</string>
    <string name="mode_1_img_descrip">Random Car</string>
    <string name="identify_btn_text">Identify</string>
    <string name="submit_btn_text">Submit</string>

    <string name="win_txt">CORRECT!</string>
    <string name="lose_txt">INCORRECT!</string>
    <string name="mode2_text_hint">Enter a charcter</string>
    <string name="ran_img1_descrip">random image 1</string>
    <string name="ran_img2_descrip">random image 2</string>
    <string name="ran_img3_descrip">random image 3</string>
    <string name="enter_car_model_hint">Enter car model</string>


    <string-array name="models_array">
        <item>Audi</item>
        <item>BMW</item>
        <item>Cadillac</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Lexus</item>
        <item>McLaren</item>
        <item>Mercedes</item>
        <item>Mini Cooper</item>
        <item>Nissan</item>
        <item>Porsche</item>
        <item>Subaru</item>
        <item>Tesla</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
    </string-array>
</resources>